LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Project__c/sfpm_Project__c.object-meta.xml
<CustomObject>
    <description>2020-01-13 - N. Ehrmann - Part of the sfpm (Salesforce Project Management) collection of objects. A Project represents a possible source of work, an ongoing workstream. These are not bookended Projects with start and end dates (see Epics), but large, work-generating themes.</description>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>