LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Project__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>2020-01-13 - N. Ehrmann - The primary department for this workstream.</description>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Departments</valueSetName>
    </valueSet>
</CustomField>