LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Project__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>2020-01-13 - N. Ehrmann - A summary of the project themes and purpose.</description>
    <inlineHelpText>A summary of the project themes and purpose.</inlineHelpText>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>