LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Project__c/fields/Last_Review__c.field-meta.xml
<CustomField>
    <fullName>Last_Review__c</fullName>
    <description>2020-01-13 - N. Ehrmann - The date that this project was last reviewed by the CoE.</description>
    <label>Last Review</label>
    <type>Date</type>
</CustomField>