LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Project__c/fields/Measurable_Value__c.field-meta.xml
<CustomField>
    <fullName>Measurable_Value__c</fullName>
    <description>2020-01-13 - N. Ehrmann - Metrics or KPIs which can confirm whether or not this workstream is still delivering value.</description>
    <label>Measurable Value</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>