LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Project__c/fields/Most_Recent_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Delivery__c</fullName>
    <description>2020-01-23 - N. Ehrmann - The completed date of the most recent completed task for this project.</description>
    <inlineHelpText>The most recent completed date for a work item on this project.</inlineHelpText>
    <label>Most Recent Delivery</label>
    <summarizedField>sfpm_Task__c.Completed_Date__c</summarizedField>
    <summaryForeignKey>sfpm_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>