LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Project__c/fields/Most_Recent_Request__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Request__c</fullName>
    <description>2020-01-23 - N. Ehrmann - The most recent request for this project.</description>
    <inlineHelpText>The date of the most recent request for this project.</inlineHelpText>
    <label>Most Recent Request</label>
    <summarizedField>sfpm_Task__c.Requested_Date__c</summarizedField>
    <summaryForeignKey>sfpm_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>