LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Project__c/fields/Next_Review__c.field-meta.xml
<CustomField>
    <fullName>Next_Review__c</fullName>
    <description>2020-01-13 - N. Ehrmann - The next CoE review date for the project.</description>
    <label>Next Review</label>
    <type>Date</type>
</CustomField>