LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>2020-01-13 - N. Ehrmann - The status of the Project. Active - There are current open tasks. Stable - There are no current open tasks. Inactive - The application / functionality have been decommissioned. Ongoing - For departmental support projects.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Stable</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>