LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Project__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>2020-01-13 - N. Ehrmann - The type of project. Functionality - Large-scale custom development. Application - The installation / maintenance of a new application in the business system. Support - Ongoing support for a department.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Functionality</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>