LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Project__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <description>2020-01-13 - N. Ehrmann - This controls the sharing / visibility of the Project, and its detail records (Epics and Tasks).</description>
    <label>View</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>